- Fixed issue #10548: DatabaseSchema uses different sequence names for Oracle
  and PostgreSQL.
- Fixed issue #10630: Call-time pass-by-reference warning in Oracle handler.
- Implemented feature #9584: Switch for overwriting files.
  (PersistentObjectDatabaseSchemaTiein)
- Implemented feature #9874: ezcDbSchema[DB]Reader custom table schema class.


1.1 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added support for Oracle.
- Fixed issue #8499: PersistentObjectDatabaseSchemaTiein rungenerator.php
  overwrites files without warning.
- Fixed issue #9465: Fixed data type mapping. Based on a patch by Friedel
  Hill.
- Fixed issue #9489: Check whether the PersistentObject and
  PersistentObjectDatabaseSchemaTiein tutorials are interlinked.
- Fixed issue #9541: Tutorial introduction incorrect.
- Fixed issue #9819: Let all components deal with the ezcBaseAutoloadException
  properly.
- Fixed SQL syntax issues when working with PostgreSQL 7.x.


1.1beta1 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added support for PostgreSQL and SQLite.
- Added support for default column values in the MySQL handler.
- Added feature #8744: Changed the ezcDbSchema::getSchema() method to
  return the schema as a reference, so that it can be modified properly.
- Fixed getting a PDOException when executing queries in the MySQL handler.
- Fixed issue #8650: No exception is thrown when writing database schema files
  to non-writable directories.
- Fixed issue #9322: PostgreSQL and SQLite handler issues.


1.0.2 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8900: Problem with auto increment and primary keys for MySQL
  because the skip_primary context was not reset for new tables.
- Added a new validator to check whether columns marked as 'auto_increment'
  actually have a primary key defined as well.